Mon Jun 17 1996  Ian Lance Taylor  <ian@cygnus.com>

	* rcscmds.c (RCS_checkout): Remove noerr parameter.  Change all
	callers.
	* rcs.c (RCS_fast_checkout): Likewise.

Mon Jun 17 1996  Ian Lance Taylor  <ian@cygnus.com>

	Cleaner implementation of tag locking code added Jun 13 1996:
	* cvs.h (tag_lockdir, tag_unlockdir): Declare.
	* rtag.c (locked_dir, locked_list): Remove.
	(rtag_fileproc): Don't lock here; just call tag_lockdir.
	(rtag_filesdoneproc): Don't unlock here; just call tag_unlockdir.
	* tag.c (locked_dir, locked_list): Move farther down in file.
	(tag_fileproc): Don't lock here; just call tag_lockdir.
	(tag_filesdoneproc): Don't unlock here; just call tag_unlockdir.
	(tag_lockdir, tag_unlockdir): New functions.

Wed Jun 15 07:52:22 1996  Mike Ladwig  <mike@twinpeaks.prc.com>

	* client.c (send_modified, update_entries): Fixed bug which didn't
	handle binary file transfers in BROKEN_READWRITE_CONVERSION.

Thu Jun 13 1996  Ian Lance Taylor  <ian@cygnus.com>
		 and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* update.c (checkout_file): Call server_scratch_entry_only when a
	non-pertinent file is found that does not exist.
	* sanity.sh (newb): Add test case for above patch.

Thu Jun 13 1996  Ian Lance Taylor  <ian@cygnus.com>

	* update.c (update_fileproc): Call server_scratch_entry_only when
	handling T_REMOVE_ENTRY on the server.
	* sanity.sh (conflicts2): Remove special case for remote server
	bug fixed by above patch.

Thu Jun 13 21:16:26 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (basica-9): Update to reflect change to "sufficient
	access" message.

Thu Jun 13 20:13:55 1996  Ian Lance Taylor  <ian@cygnus.com>
			  and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* recurse.c, cvs.h (start_recursion): Remove wd_is_repos argument;
	add comment about meaning of which argument.  Use !(which &
	W_LOCAL) instead of wd_is_repos.
	* admin.c, client.c, commit.c, diff.c, edit.c, lock.c, log.c,